--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,7 +3,7 @@ name: End-to-end tests
 on: [push]
 jobs:
   
-  cypress-run:
+  integration-tests:
     runs-on: ubuntu-16.04
     steps:
       - name: Checkout
@@ -13,10 +13,8 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.8'
-
-      - name: Start python server
-        run: |
-          python -m http.server --directory build/ 1111
       
       - name: Run test suite
         uses: cypress-io/github-action@v1
+        with:
+          start: npm test
